--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -505,7 +505,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!--tabcontent 2-->
+                                   <!--tabcontent 2-->
                                     <div>
                                         <div class="content__wrapper">
                                             <div class="_head">
@@ -516,47 +516,47 @@
                                                     <!--h4>基本資訊</h4-->
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="林小姐" disabled>
+                                                            <input name="" type="text" value="林小姐">
                                                             <label>姓名</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="ujkkk@gmail.com" disabled>
+                                                            <input name="" type="text" value="ujkkk@gmail.com">
                                                             <label>電子郵件</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="(02)2660-7600" disabled>
+                                                            <input name="" type="text" value="(02)2660-7600">
                                                             <label>聯絡電話</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="選填，例如學校" disabled>
+                                                            <input name="" type="text" value="選填，例如學校">
                                                             <label>單位</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="無" disabled>
+                                                            <input name="" type="text" value="無">
                                                             <label>住家電話</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="無" disabled>
+                                                            <input name="" type="text" value="無">
                                                             <label>手機</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="46~55" disabled>
+                                                            <input name="" type="text" value="46~55">
                                                             <label>年齡</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="家管" disabled>
+                                                            <input name="" type="text" value="家管">
                                                             <label>職業</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="大學" disabled>
+                                                            <input name="" type="text" value="大學">
                                                             <label>教育</label>
                                                         </div>
                                                     </div>
