--- a/tpmlwebref_emailtemplate.htm
+++ b/tpmlwebref_emailtemplate.htm
@@ -228,7 +228,7 @@
                                                 class="i_add"></i>新增公版</button>
                                     </div>
                                 </div>
-                                <div class="_content">
+                             <div class="_content">
                                     <!-- 表格樣式 -->
                                     <div class="table_wrapper">
                                         <table class="table_hover">
@@ -250,7 +250,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">10</td>
-                                                    <td><time>讀者版(判斷不公開轉相關單位)</time></td>
+                                                    <td><time>不清楚提問內容</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -263,7 +263,8 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">9</td>
-                                                    <td><time>讀者版(判斷不公開不予處理)</time></td>
+                                                    <td><time>密碼無法登入</time>
+                                                    </td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -276,7 +277,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">8</td>
-                                                    <td><time>讀者版(判斷公開/長官審核)</time></td>
+                                                    <td><time>借閱證超過10年</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -289,7 +290,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">7</td>
-                                                    <td><time>標題1</time></td>
+                                                    <td><time>贈書</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -302,7 +303,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">6</td>
-                                                    <td><time>標題2</time></td>
+                                                    <td><time>還書問題</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -315,8 +316,8 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">5</td>
-                                                    <td><time>標題3</time></td>
-                                                    <td><span class="green">未啟用</span></td>
+                                                    <td><time>轉介其他課/室</time></td>
+                                                    <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -328,7 +329,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">4</td>
-                                                    <td><time>標題4</time></td>
+                                                    <td><time>其他1</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -341,7 +342,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">3</td>
-                                                    <td><time>標題5</time></td>
+                                                    <td><time>其他2</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -354,7 +355,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">2</td>
-                                                    <td><time>標題6</time></td>
+                                                    <td><time>其他3</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -366,8 +367,8 @@
                                                 </tr>
                                                 <tr>
                                                     <td><input type="checkbox"></td>
-                                                    <td class="num">10</td>
-                                                    <td><time>標題7</time></td>
+                                                    <td class="num">1</td>
+                                                    <td><time>其他4</time></td>
                                                     <td><span class="green">未啟用</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
