--- a/tpmlwebref_emailtemplate.htm
+++ b/tpmlwebref_emailtemplate.htm
@@ -316,7 +316,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">5</td>
-                                                    <td><time>轉介其他課/室</time></td>
+                                                    <td><time>轉介其他課/室(副本長官)</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
