--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -505,7 +505,7 @@
                                                 </td>
                                                 <td>應用科學</td>
                                                 <td><span class="orange">簽核</span></td>
-                                                <td><span class="red">已回覆90天</span></td>
+                                                <td><span class="gray">已回覆</span></td>
                                                 <td><time>2024/5/13
                                                         <br>下午16:09</time></td>
                                                 <td>
