--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -204,7 +204,7 @@
                                                     </div>
                                                     <div class="form_grp" style="margin-bottom:50px;">
                                                         <div class="labelEffect">
-                                                            <textarea class="used"><textarea class="used">敬啟者您好
+                                                            <textarea class="used">敬啟者您好
     我目前正在撰寫一篇研究性的論文，題目是「公共圖書館開闢財源之研究」，想調查國內各縣市公共圖書館因經費短缺，如何增加圖書館的收入來源，不知能否提供貴館有哪些收入來源的管道以便彙整撰寫。
     謝謝您！</textarea>
                                                             <label>讀者問題描述</label>
