--- a/tpmlwebref_chat_customer.htm
+++ b/tpmlwebref_chat_customer.htm
@@ -173,6 +173,24 @@
                                         <li><a href="#">不公開</a></li>
                                     </ul>
                                 </div>
+                                <div class="control_panel">
+                                    <div class="dropdown">
+                                        <button class="btn dropdown-btn">
+                                            <i class="i_setting"></i>批次處理</button>
+                                        <div class="dropdown-content">
+                                            <ul>
+                                                <li>
+                                                    <button class="btn">
+                                                        <i class="i_add"></i>批次匯出</button>
+                                                </li>
+                                                <li>
+                                                    <button class="btn">
+                                                        <i class="i_add"></i>批次刪除</button>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="pagination">
                                     <form action="" class="form_inline">
                                         <div class="total">
@@ -202,6 +220,7 @@
                                         <thead>
                                             <tr>
                                                 <!--th><input type="checkbox"></th-->
+                                                <th><input type="checkbox"></th>
                                                 <th><a href="#">序號<i class="i_sort"></i></a></th>
                                                 <th class="main_data">情境內容
                                                     <a href="#"><i class="i_sort"></i>
@@ -214,6 +233,7 @@
                                         </thead>
                                         <tbody>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">10</td>
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                         title="檢視留言資料">進去圖書館</a>
@@ -227,6 +247,7 @@
                                                     </div>
                                                 </td>
                                             </tr>
+                                            <td><input type="checkbox"></td>
                                             <td class="num" data-title="序號">9</td>
                                             <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                     title="檢視留言資料">捐書</a>
@@ -241,6 +262,7 @@
                                             </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">8</td>
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                         title="檢視留言資料">找不到書</a>
@@ -255,6 +277,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">7</td>
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                         title="檢視留言資料">預約書到館 </a>
@@ -269,6 +292,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">6</td>
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                         title="檢視留言資料">您好 </a>
@@ -283,6 +307,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">5</td>
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                         title="檢視留言資料">Hello</a>
@@ -297,6 +322,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">4</td>
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
                                                         title="檢視留言資料">愛書亞</a>
@@ -311,6 +337,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">3</td>
 
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
@@ -326,6 +353,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">2</td>
 
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
@@ -341,6 +369,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
+                                                <td><input type="checkbox"></td>
                                                 <td class="num" data-title="序號">1</td>
 
                                                 <td data-title=""><a href="tpmlwebref_chat_customer_add.htm"
