--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -316,7 +316,7 @@
                                         <li><a href="#">已結案</a></li>
                                     </ul>
                                 </div>
-                                <!-- 頁碼 -->
+                                 <!-- 頁碼 -->
                                 <div class="control_panel">
                                     <div class="dropdown">
                                         <button class="btn dropdown-btn">
@@ -361,6 +361,8 @@
                                                 <th><input type="checkbox"></th>
                                                 <th><a href="#">序號<i class="i_sort"></i></a></th>
                                                 </th>
+                                                <th><a href="#">文件編號<i class="i_sort"></i></a></th>
+                                                </th>
                                                 <th><a href="#">提問時間<i class="i_sort"></i></a></th>
                                                 <th class="text-center">讀者問題描述</th>
                                                 <th class="text-center">問題主題類別</th>
@@ -377,6 +379,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">10</td>
+                                                <td>113-A010</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">您好：最近要預約書時發現：無法選擇圖書館（原有設定沒了，要求我選擇圖書館，但是沒有任何選項可選。判斷是有bug或我半夜是不允許操作？），所以這個選項，不論在預約下或在個人設定下，都沒有選項（圖書館list）。
@@ -398,6 +401,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">9</td>
+                                                <td>113-A009</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a
@@ -419,6 +423,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">8</td>
+                                                <td>113-A008</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">借閱及預約取書期限於4/3到期者延長至4/9
@@ -440,6 +445,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">7</td>
+                                                <td>113-A007</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">補充說明
@@ -473,6 +479,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">6</td>
+                                                <td>113-A006</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">新書通報列表，新書月份選擇2022/11，語文別選擇中文：
@@ -495,6 +502,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">5</td>
+                                                <td>113-A005</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">「第85梯次好書大家讀」之得獎書單，上傳附檔前，請依類別調整「序號」，謝謝
@@ -518,6 +526,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">4</td>
+                                                <td>113-A004</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">新書通報列表，新書月份選擇2022/11，語文別選擇中文：
@@ -539,6 +548,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">3</td>
+                                                <td>113-A003</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">請問圖書館會添補已去向不明的館藏嗎？
@@ -561,6 +571,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">2</td>
+                                                <td>113-A002</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a
@@ -581,6 +592,7 @@
                                             <tr>
                                                 <td><input type="checkbox"></td>
                                                 <td class="num">1</td>
+                                                <td>113-A001</td>
                                                 <td><time>2024/5/13
                                                         <br>下午18:09</time></td>
                                                 <td><a href="tpmlwebref_questionsearchnew.htm">借閱及預約取書期限於4/3到期者延長至4/9
