--- a/tpmlwebref_referrals.htm
+++ b/tpmlwebref_referrals.htm
@@ -173,12 +173,30 @@
                     <!-- flex-12 -->
                     <div class="flex-12">
                         <div class="col ">
-                            <!-- 中央區塊 -->
+                              <!-- 中央區塊 -->
                             <div class="content_block">
                                 <div class="_head">
                                     <h3>條列維護</h3>
                                 </div>
                                 <div class="_head">
+                                    <div class="control_panel">
+                                        <div class="dropdown">
+                                            <button class="btn dropdown-btn">
+                                                <i class="i_setting"></i>批次處理</button>
+                                            <div class="dropdown-content">
+                                                <ul>
+                                                    <li>
+                                                        <button class="btn">
+                                                            <i class="i_add"></i>批次匯出</button>
+                                                    </li>
+                                                    <li>
+                                                        <button class="btn">
+                                                            <i class="i_add"></i>批次刪除</button>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <!-- 頁碼 -->
                                     <div class="pagination">
                                         <form action="" class="form_inline">
@@ -203,6 +221,7 @@
                                         <table class="table_hover">
                                             <thead>
                                                 <tr>
+                                                    <th><input type="checkbox"></th>
                                                     <th class="text-left">
                                                         <a href="#">序號<i class="i_sort"></i></a>
                                                     </th>
@@ -214,6 +233,7 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">10</td>
                                                     <td><time>大安區</time></td>
                                                     <td><time>分館1</time></td>
@@ -227,6 +247,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">9</td>
                                                     <td><time>松山區</time></td>
                                                     <td><time>分館2</time></td>
@@ -239,6 +260,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">8</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館4</time></td>
@@ -251,6 +273,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">7</td>
                                                     <td><time>大安區</time></td>
                                                     <td><time>分館3</time></td>
@@ -263,6 +286,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">6</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館5</time></td>
@@ -275,6 +299,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">5</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館6</time></td>
@@ -288,6 +313,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">4</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館7</time></td>
@@ -300,6 +326,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">3</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館8</time></td>
@@ -312,6 +339,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">2</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館9</time></td>
@@ -324,6 +352,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num">1</td>
                                                     <td><time>中山區</time></td>
                                                     <td><time>分館10</time></td>
@@ -338,7 +367,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                <!-- 頁碼 -->
+                                    <!-- 頁碼 -->
                                 <div class="pagination">
                                     <ul class="page">
                                         <li class="first"><a href="#" title="第一頁">第一頁 </a></li>
