--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -572,9 +572,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- 右側資料widget -->
+                                                       <!-- 右側資料widget -->
                             <div class="publish_block">
-                               <!-- 每種不同功能，都用block區分 -->
+                                <!-- 每種不同功能，都用block區分 -->
                                 <div class="block">
                                     <div class="_head">
                                         <h3>轉介單位</h3>
@@ -620,12 +620,65 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- 每種不同功能，都用block區分 -->
+                                <div class="block">
+                                    <div class="_head">
+                                        <h3>問題選粹</h3>
+                                    </div>
+                                    <div class="flex-form">
+                                        <div class="form_grp">
+                                            <div class="labelEffect">
+                                                <select id="" name="" class="used">
+                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="選項1">常見問題</option>
+                                                    <option value="選項2">館務</option>
+                                                    <option value="選項3">知識性</option>
+                                                </select>
+                                                <label>三大分類</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="flex-form">
+                                        <div class="form_grp">
+                                            <div class="labelEffect">
+                                                <select id="" name="" class="used">
+                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="選項1">閱覽服務問題</option>
+                                                    <option value="選項2">終身學習問題</option>
+                                                    <option value="選項3">館際合作問題</option>
+                                                    <option value="選項1">電腦使用問題</option>
+                                                    <option value="選項2">館藏查詢系統及圖書預約問題</option>
+                                                    <option value="選項3">其他</option>
+                                                </select>
+                                                <label>次分類</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="radio_grp form_inline">
+                                        <label><input name="radioStatus" type="radio" value="" checked
+                                                disabled><span>放置愛書亞</span></label>
+                                        <label><input name="radioStatus" type="radio" value=""
+                                                disabled><span>不放愛書亞</span></label>
+                                    </div>
+                                    <div class="btn_grp">
+                                        <button class="btn btn-primary">確認轉介</button>
+                                        <div class="form_content">
+                                            <div class="checkbox_grp form_inline">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="block">
                                     <div class="_head">
                                         <h3>選項</h3>
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
+                                            <div class="form_title">選項</div>
+                                            <div class="form_content">
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="btn_grp">
