--- a/tpmlwebref_chat_customer_add.htm
+++ b/tpmlwebref_chat_customer_add.htm
@@ -264,7 +264,7 @@
                                         </div>
                                     </div>
                                     <div class="btn_grp">
-                                        <button class="btn btn-green">暫存</button>
+                                        <button class="btn btn-green">取消</button>
                                         <button class="btn btn-orange">發布</button>
                                     </div>
                                 </div>
