--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -682,7 +682,7 @@
                                         </div>
                                     </div>
                                     <div class="btn_grp">
-                                        <button class="btn btn-green">暫存</button>
+                                        <button class="btn btn-green">取消</button>
                                         <button class="btn btn-orange">陳核</button>
                                     </div>
                                 </div>
