--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -631,7 +631,7 @@
                                         </div>
                                     </div>
                                     <div class="btn_grp">
-                                        <a href="#" class="btn btn-green">暫存</a>
+                                        <a href="#" class="btn btn-green">取消</a>
                                         <a href="#" class="btn btn-primary">代鍵</a>
                                     </div>
                                 </div>
