--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -208,10 +208,25 @@
                                                         </div>
                                                         <div class="help">字數200/500</div>
                                                     </div>
-                                                    <div class="form_grp form_inline">
+                                                    <div class="form_grp">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="臺北市立圖書館相關/研究需求/其他">
-                                                            <label>用途</label>
+                                                            <div class="form_title">用途</div>
+                                                            <div class="form_content">
+                                                                <div class="check_grp form_inline">
+                                                                    <label><input name="" type="checkbox"
+                                                                            value=""><span>本館相關</span></label>
+                                                                    <label><input name="" type="checkbox"
+                                                                            value=""><span>解決疑問</span></label>
+                                                                    <label><input name="" type="checkbox"
+                                                                            value=""><span>課業問題</span></label>
+                                                                    <label><input name="" type="checkbox"
+                                                                            value=""><span>研究需求</span></label>
+                                                                    <label><input name="" type="checkbox"
+                                                                            value=""><span>工作需要</span></label>
+                                                                    <label><input name="" type="checkbox"
+                                                                            value=""><span>其他</span></label>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp form_inline">
